<resources>
    <string name="app_name">Area Caculator</string>
    <string name="area_calculator">Area Calculator</string>
    <string name="triangle">Triangle</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="rectangle">Rectangle</string>
    <string name="develped_by_awais_ali">Develped by Awais Ali</string>
    <string name="area_of_circle">Area of Circle</string>
    <string name="enter_radius">Enter Radius</string>
    <string name="i_e_5">i.e 5</string>
    <string name="enter_width">Enter Width</string>
    <string name="answer">Answer</string>
    <string name="clear">Clear</string>
    <string name="area_of_rectangle">Area of Rectangle</string>
    <string name="area_of_triangle">Area of Triangle</string>
    <string name="enter_base">Enter Base</string>
    <string name="todo">TODO</string>
    <string name="enter_height">Enter Height</string>
    <string name="area_of_square">Area of Square</string>
    <string name="enter_length_of_either_side">Enter Length of Either side</string>
    <string name="calculate">Calculate</string>
    <string name="area_of_various_shapes">Area of Various Shapes</string>
</resources>