<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="#0B0A0A"
            android:gravity="center_horizontal"
            android:text="@string/area_calculator"
            android:textColor="#03A9F4"
            android:textSize="40sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:srcCompat="@drawable/triang_noun_001_18172"
            android:contentDescription="@string/triangle" />

        <Button
            android:id="@+id/triangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triangle"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:srcCompat="@drawable/circle"
            android:contentDescription="@string/circle" />

        <Button
            android:id="@+id/Circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circle"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:srcCompat="@drawable/square___black_simple_svg"
            android:contentDescription="@string/square"/>

        <Button
            android:id="@+id/Square"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/square"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:srcCompat="@drawable/download"
            android:contentDescription="@string/rectangle"/>

        <Button
            android:id="@+id/Rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rectangle"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:text="@string/develped_by_awais_ali"
            android:textColor="#131313"
            android:textSize="34sp"
            android:gravity="center"
            android:textStyle="bold|italic" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>