<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/circle"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/download"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/square___black_simple_svg"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/triang_noun_001_18172"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="157dp"
            android:gravity="center"
            android:text="@string/area_of_various_shapes"
            android:textColor="#090909"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="157dp"
            android:gravity="center"
            android:text="@string/develped_by_awais_ali"
            android:textColor="#090909"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/download__1_"
            android:contentDescription="@string/todo" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>